--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -51,9 +51,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 TechCon Conference. All rights reserved.</p>
+        <p>Copyright 2024 TechCon Conference. All rights reserved.</p>
     </footer>
-
+      
 </body>
 
 </html>
