--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -59,11 +59,12 @@
             </tbody>
         </table>
     </main>
-
+    
     <footer>
-        <p>&copy; 2024 TechCon Conference. All rights reserved.</p>
+        <p>Copyright 2024 TechCon Conference. All rights reserved.</p>
     </footer>
-
+      
+  
 </body>
 
 </html>
