--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact TechCon 2024</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Us</title>
 </head>
 
 <body>
     <header>
-        <h1>Contact TechCon 2024</h1>
+        <h1>Contact Us</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -23,17 +24,34 @@
     <main>
         <section>
             <h2>Get in Touch</h2>
-            <p>Have questions? Reach out to us through any of the methods below.</p>
+            <p>Have questions? Reach out to us through the form below or via email.</p>
+            <p>Email: <a href="mailto:email@example.com">email@example.com</a></p>
 
-            <ul>
-                <li><strong>Email:</strong> <a href="mailto:info@techcon2024.com">info@techcon2024.com</a></li>
-                <li><strong>Phone:</strong> +123-456-7890</li>
-                <li><strong>Twitter:</strong> <a href="https://twitter.com/TechCon2024" target="_blank"
-                        rel="noopener noreferrer">@TechCon2024</a></li>
-            </ul>
+            <!-- Iframe Example (you can use any working embed link) -->
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.168660533518!2d144.963058!3d-37.814217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf577d6f5b8d6d60f!2sFederation%20Square!5e0!3m2!1sen!2sau!4v1603068426329!5m2!1sen!2sau"
+                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
+
+        <section>
+            <h2>Contact Form</h2>
+            <form action="#" method="post">
+                <label for="name">Full Name:</label>
+                <input type="text" id="name" name="name" required /><br><br>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required /><br><br>
+
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message" rows="5" cols="40" required></textarea><br><br>
+
+                <button type="submit">Submit</button>
+            </form>
         </section>
     </main>
+
     
+
     <footer>
         <p>Copyright 2024 TechCon Conference. All rights reserved.</p>
     </footer>
